// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table devices {
  serial_number int [primary key]
  device_name varchar
  device_type enum
  creation_date timestamp

  indexes {
      device_name
  }
}

Table locations {
  location_id int [primary key]
  location_name varchar
  location_type enum
  device_count int

  indexes {
      location_name
  }
}

Table device_location {
  device_sn int [primary key]
  location_id int
}

Ref: devices.serial_number - device_location.device_sn // one-to-one

Ref: locations.location_id < device_location.location_id // one-to-many
